--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- SEO code down below -->
-    <title>NewIndia</title>
+    <title>StarGains</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
