--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
       name="description"
       content="Let's make your time into money via trading strategies and analysis."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="icon" type="image/x-icon" href="./logo.png">
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/logo.svg">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
